Bug 164630 - [xen] XEN HVM kernel: run_interrupt_driven_hooks: still waiting after 60 seconds for xenbusb_nop_confighook_cb
Summary: [xen] XEN HVM kernel: run_interrupt_driven_hooks: still waiting after 60 seco...
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: kern (show other bugs)
Version: Unspecified
Hardware: Any Any
: Normal Affects Only Me
Assignee: freebsd-xen (Nobody)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-30 12:20 UTC by Josef Karthauser
Modified: 2014-12-11 00:21 UTC (History)
3 users (show)

See Also:


Attachments
Backport of r256423 to 9 by Mark Felder (1.44 KB, patch)
2014-07-14 17:28 UTC, Adam McDougall
no flags Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Josef Karthauser 2012-01-30 12:20:10 UTC
Enable the XEN HVM drivers in the kernel config:

# Xen HVM support
options XENHVM
device xenpci

Boot the system on the new kernel.

Observe, kernel probes acd0, xenbusb_front0, xn0, ugen0.1, xenbusb_back0, xctrl0, xbd0, xbd1, uhub0, ugen0.2: ums0:

then hangs with:

run_interrupt_driven_hooks: still waiting after 60 seconds for xenbusb_nop_confighook_cb 

This message appears every 60 seconds, and the kernel book never completes.
Comment 1 Mark Linimon freebsd_committer freebsd_triage 2012-01-30 16:56:34 UTC
Responsible Changed
From-To: freebsd-bugs->freebsd-xen

Over to maintainer(s).
Comment 2 Roger Pau Monné freebsd_committer freebsd_triage 2014-07-04 15:11:18 UTC
I haven't been able to reproduce this issue with any current FreeBSD version.
Comment 3 Adam McDougall 2014-07-14 17:27:33 UTC
I can still reproduce this issue.  I just installed FreeBSD 9.3-RELEASE, compiled and installed a kernel from the XENHVM config file on the following platforms:

XenServer 6.2SP1 (Xen 4.1) 70446c XS62ESP1002
XenServer "6.5"  (Xen 4.4) 86858c XenServer Creedence Alpha 4

The reason is because r256423 was merged to 10 as r256757 but not to 9 yet.  10 works great.

In the meantime I am still using feld@'s patch every time I have to compile 9: https://feld.me/freebsd/freebsd9-xen-cdrom-fix.patch

It would be appreciated if it could be incorporated into 9.  Thanks.
Comment 4 Adam McDougall 2014-07-14 17:28:46 UTC
Created attachment 144662 [details]
Backport of r256423 to 9 by Mark Felder
Comment 5 Mark Felder freebsd_committer freebsd_triage 2014-07-15 20:05:58 UTC
(In reply to mcdouga9 from comment #3)
> I can still reproduce this issue.  I just installed FreeBSD 9.3-RELEASE,
> compiled and installed a kernel from the XENHVM config file on the following
> platforms:
> 
> XenServer 6.2SP1 (Xen 4.1) 70446c XS62ESP1002
> XenServer "6.5"  (Xen 4.4) 86858c XenServer Creedence Alpha 4
> 
> The reason is because r256423 was merged to 10 as r256757 but not to 9 yet. 
> 10 works great.
> 
> In the meantime I am still using feld@'s patch every time I have to compile
> 9: https://feld.me/freebsd/freebsd9-xen-cdrom-fix.patch
> 
> It would be appreciated if it could be incorporated into 9.  Thanks.

Please note on FreeBSD 9.3 you do not need to build a XENHVM kernel. Just add xenhvm_load="YES" to loader.conf

I'm surprised this wasn't backported to 9-STABLE. (It wasn't my patch; I believe I just fixed it slightly to patch to 9 cleanly)
Comment 6 Mark Felder freebsd_committer freebsd_triage 2014-07-15 20:10:10 UTC
Yes, checking the source of 9-STABLE shows this wasn't backported. Very unfortunate this missed 9.3-RELEASE. I had been concentrating on 10.0 internally so much because of various other fixes I appear to have missed testing this during the BETA/RC stage.
Comment 7 commit-hook freebsd_committer freebsd_triage 2014-07-18 07:19:11 UTC
A commit references this bug:

Author: royger
Date: Fri Jul 18 07:18:38 UTC 2014
New revision: 268832
URL: http://svnweb.freebsd.org/changeset/base/268832

Log:
  MFC r256423:

  Allow FreeBSD to be booted from CDROM media on XenServer 6.2 and prior
  releases.

  PR:		164630

Changes:
  stable/9/sys/dev/xen/blkfront/blkfront.c
Comment 8 Roger Pau Monné freebsd_committer freebsd_triage 2014-07-18 07:38:39 UTC
I've MFCed the patch to stable-9, sorry for missing the 9.3 release.
Comment 9 miguelmclara 2014-12-07 23:54:23 UTC
I was also getting the error:
run_interrupt_driven_hooks: still waiting after 60 seconds for xenbusb_nop_confighook_cb

After an update via freebsd-update

So I rebooted into the old kernel I had compiled and got "9 stable" trough svn.

I noticed above:
Please note on FreeBSD 9.3 you do not need to build a XENHVM kernel. Just add xenhvm_load="YES" to loader.conf

So I built GENERIC + VIMAGE and added the line... the machine boots fine but I get an re0 interface and not xn0 so I'm not sure if XENHVM drivers are really in use.
Comment 10 miguelmclara 2014-12-08 00:37:32 UTC
Actually after a reboot I'm back to:

run_interrupt_driven_hooks: still waiting after 60 seconds for xenbusb_nop_confighook_cb

% svn info
Path: .
Working Copy Root Path: /usr/src
URL: svn://svn0.eu.freebsd.org/base/stable/9
Relative URL: ^/stable/9
Repository Root: svn://svn0.eu.freebsd.org/base
Repository UUID: ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f
Revision: 275582
Node Kind: directory
Schedule: normal
Last Changed Author: ngie
Last Changed Rev: 275525
Last Changed Date: 2014-12-05 21:37:27 +0000 (Fri, 05 Dec 2014)

Should I try building XENHVM myself again?
Comment 11 miguelmclara 2014-12-08 02:30:08 UTC
Reverting xenfront.c to Revision 251973 worked for me!
Comment 12 Roger Pau Monné freebsd_committer freebsd_triage 2014-12-09 12:01:55 UTC
I'm not sure I'm correctly understanding the problem you are reporting. Using freebsd-update should be fine, but AFAIK the patch in this bug report is not included in 9.3 so the updated kernel you get when using freebsd-update will also not contain this patch.

Also, I don't see any xenfront.c file in the FreeBSD source tree, so I'm not sure what you meant.
Comment 13 miguelmclara 2014-12-09 13:32:39 UTC
Sorry my confusion I assumed from the last comment that the patch was applied:
"Roger Pau Monné  freebsd_committer 2014-07-18 07:38:39 UTC
I've MFCed the patch to stable-9, sorry for missing the 9.3 release."


Also I meant "sys/dev/xen/blkfront/blkfront.c"

I am getting the same error if I get the latest revision of blkfront.c, but reverting the one before (r251973) works fine!

Hope this is a bit more clear,

thanks
Comment 14 Roger Pau Monné freebsd_committer freebsd_triage 2014-12-09 16:00:08 UTC
(In reply to miguelmclara from comment #13)
> Sorry my confusion I assumed from the last comment that the patch was
> applied:
> "Roger Pau Monné  freebsd_committer 2014-07-18 07:38:39 UTC
> I've MFCed the patch to stable-9, sorry for missing the 9.3 release."
> 
> 
> Also I meant "sys/dev/xen/blkfront/blkfront.c"
> 
> I am getting the same error if I get the latest revision of blkfront.c, but
> reverting the one before (r251973) works fine!

So if you use the latest revision of the stable-9 branch (that contains r268832), it doesn't work, and the issue that you see is the same as the one mentioned in this bug report (run_interrupt_driven_hooks: still waiting after...)?

Can you try to just revert r268832 (instead of going back to r251973), and see if that solves the problem?

HEAD also has this same patch, do you also observe this problem with HEAD?

I assume you are using XenServer instead of OSS Xen, is that right?
Comment 15 miguelmclara 2014-12-09 16:39:06 UTC
I'm no home now but I'll revert the patch as soon as I get there.

I should add though that the Dom0 is NetBSD, sorry should have mention that already.
Comment 16 miguelmclara 2014-12-11 00:21:47 UTC
Since you mention this should work with the latest revision I tested with a fresh svn checkout and rebuilt/reinstalled the kernel.

It works fine.

So this was most likely a mistake I made or something wrong with the build... My best guess I might have done something wrong in the make installkernel.

So the issue is only present when using 9.3-RELEASE not stable!

Sorry for the noise!