MFC r256423:

Allow FreeBSD to be booted from CDROM media on XenServer 6.2 and prior
releases.

PR:		164630